--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
 #################
+## Jetbrains
+#################
+
+*.iml
+
+#################
 ## CLion
 #################
 
-*.idea
 cmake-build-debug/
 
+#################
+## IntelliJ
+#################
+
+*.idea
+out/
 
 #################
 ## Eclipse
